--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
+[Bb]in/
 [Bb]uilds/
 [Ll]ogs/
 [Mm]emoryCaptures/
@@ -58,3 +59,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Bin.zip
